# Conglomerate

./: .gitignore  CMakeLists.txt  Conglomerate.vcxproj  README.md
glom_output/: main.cpp  out.cpp
src/: Filesystem.h  Header.cpp  Header.h  HeaderSorter.cpp  HeaderSorter.h  Main.cpp  SourceFile.cpp  SourceFile.h  Util.cpp  Util.h
